# nrg-flight

./: .gitignore  DOCKER.md  README.md  docker-compose.build.yml  docker-compose.yml
.github/workflows/: publish-images.yml
ai-service/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
ai-service/ai_service/: __init__.py  main.py
ai-service/ai_service/api/: main.py
ai-service/ai_service/api/routes/: chat.py
ai-service/ai_service/core/: __init__.py  config.py  db.py  security.py
ai-service/ai_service/graph/: __init__.py  app.py  state.py
ai-service/ai_service/tools/: __init__.py  book_seat.py  common.py  query_available_flights_for_date.py  query_available_time_slots_for_date.py  query_passenger_count_for_flight.py  query_window_seats_available.py
api/: .dockerignore  .env.example  Dockerfile  MIGRATIONS.md  POSTMAN.md  README.md  alembic.ini  postman_collection.json  postman_collection.schema_check.md  postman_environment_local.json  pyproject.toml
api/app/: __init__.py  crud.py  health.py  main.py  models.py  utils.py
api/app/alembic/: env.py  script.py.mako
api/app/alembic/versions/: 001_initial_schema.py
api/app/api/: __init__.py  deps.py  main.py
api/app/api/routes/: admin.py  aircraft.py  auth.py  booking.py  flight.py  seat.py
api/app/core/: __init__.py  config.py  db.py  security.py
api/app/exceptions/: __init__.py  base.py  handlers.py
api/app/schemas/: admin.py  aircraft.py  auth.py  booking.py  flight.py  seat.py
api/tests/: conftest.py  test_config.py  test_db_guid.py  test_deps.py  test_health.py  test_utils.py  utils.py
api/tests/api/: test_admin.py  test_admin_helper.py  test_aircraft.py  test_auth.py  test_flights_seats_bookings.py  test_more_coverage.py
client/: .dockerignore  .env.example  Dockerfile  README.md  package-lock.json  package.json
client/src/: App.tsx  main.tsx  store.ts
client/src/app/api/: http.ts
client/src/app/auth/: auth.actions.ts  (+10 more)
client/src/store/: index.ts  store.types.ts
fastapi_plan_docs/: api_file_structure.txt  endpoint_usage.txt  schema.txt  seed_values.txt  user_journey_endpoint_tiggers.txt
(+79 files in other folders)
